--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Login and Registration Form</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="assets/CSS/style.css">
+    <script defer src="assets/JS/script.js"></script>
 </head>
 <body>
 <div class="parent-div">
